<resources>
    <!-- Titles and headers-->
    <string name="app_name">Sovita</string>
    <string name="title_home">Home</string>
    <string name="title_exercise">Exercise</string>
    <string name="title_chat">Chat</string>
    <string name="title_nutrition">Nutrition</string>
    <string name="chat_header">Groups</string>
    <string name="exercise_summary">Exercise Summary</string>
    <string name="social_summary">Social Summary</string>
    <string name="meals_summary">Meals Summary</string>
    <string name="exercise_1">Bicep Curls</string>
    <string name="catagory_arms">Arms</string>
    <string name="newWorkout_header">Create New Workout</string>
    <string name="enter_workoutName">Enter Workout Name</string>
    <string name="recent_exercises">Recent Exercises</string>
    <string name="popular_exercises">Popular Exercises</string>
    <string name="saved_exercises">Saved Exercises</string>
    <string name="exHomeFabDesc">Add Workout</string>
    <string name="mealsHomeFabDesc">Add Meal</string>
    <string name="chatHomeFabDesc">Start new chat</string>
    <string name="title_activity_workout_saved">WorkoutSaved</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="reset">Reset</string>
    <string name="submit">Submit</string>
    <string name="user_name">User Name</string>
    <string name="time">Time</string>
    <string name="reps">Reps</string>

    <!-- Dummy Group chat names-->
    <string name="naperville_speedsters">Naperville Speedsters</string>
    <string name="running4lyfe">Running 4 Lyfe</string>
    <string name="studs_only">The Fellas™</string>
    <string name="prof_kim">Prof Kim\'s gains chat</string>
    <string name="start">Start</string>
    <string name="TEMP">(TEMP)Exercise name</string>
    <string name="stop">Stop</string>
    <string name="workout_saved">Workout Saved!</string>
    <string name="go_back">Okay! - Go Back</string>

    <!-- Workout types-->
    <string name="title_activity_workout_screen">WorkoutScreen</string>
    <string name="triceps">Triceps</string>
    <string name="shoulders">Shoulders</string>
    <string name="quads">Quads</string>
    <string name="hamstrings">Hamstrings</string>
    <string name="glutes">Glutes</string>
    <string name="chest">Chest</string>
    <string name="calves">Calves</string>
    <string name="biceps">Biceps</string>
    <string name="back">Back</string>
    <string name="abs">Abs</string>
    <string name="_00_00">00:00</string>
    <string name="workout_name">Workout Name</string>
</resources>