<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.chat.ChatFragment"
    android:layout_marginBottom="?attr/actionBarSize">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabChatHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="16dp"
        android:contentDescription="@string/chatHomeFabDesc"
        android:src="@drawable/ic_baseline_add_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_notifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="26dp"
            android:background="@drawable/back"
            android:text="@string/naperville_speedsters"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_notifications2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="26dp"
            android:background="@drawable/back"
            android:text="@string/running4lyfe"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_notifications3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="26dp"
            android:background="@drawable/back"
            android:text="@string/studs_only"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_notifications4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="26dp"
            android:background="@drawable/back"
            android:text="@string/prof_kim"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>